--- a/.github/workflows/deliver-container-image.yml
+++ b/.github/workflows/deliver-container-image.yml
@@ -33,9 +33,9 @@ jobs:
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@v2.2.0
-        with:
-          cosign-release: 'v2.2.0'
+        uses: sigstore/cosign-installer@v4.0.0
+        #with:
+        #  cosign-release: 'v2.2.0'
 
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
